# aicam-demo

./: .gitignore  Dockerfile  README.md  clip.py  cmdlt.py  detect.py  milling_pose.py  pose.py  preview_pose.py  pyproject.toml  segment.py
.devcontainer/: Dockerfile  devcontainer.json
images/: p_jljt.json
