[tool.poetry]
name = "ppp-demo-docker"
version = "0.1.0"
description = ""
authors = ["chann1n9"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
ultralytics = "^8.3.29"
click = "^8.1.7"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
